--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -331,7 +331,7 @@ footer{
     border: 2px solid black;
 }
 
-.finish{
+.finish, #submit{
     margin-bottom: 3vh;
 }
 
@@ -368,4 +368,12 @@ html {
 
 .bold{
     font-weight: bold;
+}
+
+#skipIntro{
+    height: 60%;
+}
+
+#skipIntroText{
+    margin: 0;
 }
