--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -322,7 +322,7 @@ footer{
   filter: drop-shadow(0 0 4px black);
 }
 
-.Announcement{
+.announcement{
     background-color: darkGray;
 }
 
@@ -376,4 +376,8 @@ html {
 
 #skipIntroText{
     margin: 0;
+}
+
+.noWinner{
+    background-color: darkred;
 }
