--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -104,7 +104,7 @@ main #clearFields p{
     color: white;
 }
 
-main #fillInRandomly, #advanceToNext{
+main #fillInRandomly, #advanceToNext, #refresh{
     padding: 0.5vh 0 0.5vh 0;
     background-color: darkblue;
     border: 2px solid black;
