Fix bugs and add failsafes

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -109,6 +109,7 @@ main #fillInRandomly, #advanceToNext, #refresh{
     background-color: darkblue;
     border: 2px solid black;
     text-align: center;
+    color: white;
 }
 
 main #fillInRandomly p{
